SAD-518 Update default list spacing (#288)
* SAD-518 Update default list spacing

* Publish

 - @nice-digital/design-system@4.0.3-alpha.0
 - @nice-digital/icons@5.0.2-alpha.0
 - @nice-digital/nds-a-z-list@3.0.2-alpha.0
 - @nice-digital/nds-action-banner@3.0.2-alpha.0
 - @nice-digital/nds-alert@3.0.2-alpha.0
 - @nice-digital/nds-alphabet@2.0.2-alpha.0
 - @nice-digital/nds-breadcrumbs@3.0.2-alpha.0
 - @nice-digital/nds-button@3.0.2-alpha.0
 - @nice-digital/nds-callout@3.0.2-alpha.0
 - @nice-digital/nds-card@3.0.2-alpha.0
 - @nice-digital/nds-checkbox@3.0.2-alpha.0
 - @nice-digital/nds-column-list@3.0.2-alpha.0
 - @nice-digital/nds-container@3.0.2-alpha.0
 - @nice-digital/nds-core@3.0.2-alpha.0
 - @nice-digital/nds-enhanced-pagination@3.0.2-alpha.0
 - @nice-digital/nds-filters@4.0.2-alpha.0
 - @nice-digital/nds-form-group@3.0.2-alpha.0
 - @nice-digital/nds-forms@3.0.2-alpha.0
 - @nice-digital/nds-full-bleed@3.0.2-alpha.0
 - @nice-digital/nds-grid@3.0.3-alpha.0
 - @nice-digital/nds-hero@3.0.2-alpha.0
 - @nice-digital/nds-horizontal-nav@3.0.2-alpha.0
 - @nice-digital/nds-in-page-nav@3.0.2-alpha.0
 - @nice-digital/nds-input@3.0.2-alpha.0
 - @nice-digital/nds-jquery@2.0.2-alpha.0
 - @nice-digital/nds-maintain-ratio@3.0.2-alpha.0
 - @nice-digital/nds-page-header@3.0.2-alpha.0
 - @nice-digital/nds-panel@3.0.2-alpha.0
 - @nice-digital/nds-phase-banner@3.0.2-alpha.0
 - @nice-digital/nds-prev-next@3.0.2-alpha.0
 - @nice-digital/nds-radio@3.0.2-alpha.0
 - @nice-digital/nds-simple-pagination@3.0.2-alpha.0
 - @nice-digital/nds-stacked-nav@3.0.2-alpha.0
 - @nice-digital/nds-table@3.0.2-alpha.0
 - @nice-digital/nds-tabs@3.0.2-alpha.0
 - @nice-digital/nds-tag@3.0.2-alpha.0
 - @nice-digital/nds-textarea@3.0.2-alpha.0
 - dev-app@3.0.3-alpha.0
 - @nice-digital/design-system-documentation@3.0.3-alpha.0
 - storybook@3.0.3-alpha.0

* SAD-518 Remove nested list bottom margin

* Publish

 - @nice-digital/design-system@4.0.4-alpha.0
 - dev-app

--- a/components/design-system/scss/typography/_lists.scss
+++ b/components/design-system/scss/typography/_lists.scss
@@ -19,12 +19,16 @@ ol,
     ol,
     ul,
     .list {
-      margin-top: utils.rem(spacing.$small);
+      margin-top: utils.rem(spacing.$x-small);
     }
 
     li {
       margin-bottom: utils.rem(spacing.$x-small);
     }
+  }
+
+  ul {
+    margin-bottom: 0;
   }
 }
 
@@ -49,7 +53,7 @@ ol,
     ol,
     ul,
     .list {
-      margin-top: utils.rem(spacing.$medium);
+      margin-top: utils.rem(spacing.$small);
     }
 
     li {
