--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -76,6 +76,8 @@ $alphabet-letter-span: global.$custom-grey-3;
 // Card
 $card-author: global.$black-tint-1;
 $card-metadata: global.$black-tint-1;
+$card-callout-background: global.$white;
+$card-callout-border: global.$custom-grey-2;
 
 // Callout
 $callout-background: global.$white;
