--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -50,6 +50,7 @@ $success-background: global.$custom-green-1-tint;
 
 // Fills
 $fill-page-background: global.$nice-cream-tint-1;
+$fill-white-background: global.$white;
 
 // Forms
 $form-group-hint: global.$black-tint-1;
