--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -1,3 +1,17 @@
+@use '@nice-digital/nds-core/scss/colours';
+@use '@nice-digital/nds-core/scss/spacing';
+@use '@nice-digital/nds-core/scss/utils';
+
 .example {
-  background: yellow;
+  background: colours.$fill-white-background;
+  border: 1px solid colours.$border;
+  padding: utils.rem(spacing.$medium);
+
+  & > h2,
+  & > h3,
+  & > h4,
+  & > h5,
+  & > h6 {
+    margin-top: 0;
+  }
 }
