--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -3,7 +3,7 @@
 @use '@nice-digital/nds-core/scss/utils';
 
 .example {
-  background: colours.$fill-white-background;
+  background: transparent;
   border: 1px solid colours.$border;
   padding: utils.rem(spacing.$medium);
 
