--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -1,5 +1,6 @@
 @use '@nice-digital/nds-core/scss/colours';
 @use '@nice-digital/nds-core/scss/spacing';
+@use '@nice-digital/nds-core/scss/typography';
 @use '@nice-digital/nds-core/scss/utils';
 
 .example {
@@ -12,6 +13,7 @@
   & > h4,
   & > h5,
   & > h6 {
+    @include typography.h4;
     margin-top: 0;
   }
 }
