NDS-337 Update primary button colour

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -24,8 +24,8 @@ $btn-cta: global.$yellow;
 $btn-cta-hover: global.$custom-yellow-shade;
 $btn-cta-text: global.$nice-black;
 $btn-cta-border: global.$white;
-$btn-primary: global.$black-tint-1;
-$btn-primary-hover: global.$nice-black;
+$btn-primary: global.$nice-blue;
+$btn-primary-hover: global.$nice-blue-tint-4;
 $btn-primary-text: global.$white;
 $btn-secondary: global.$custom-grey-3;
 $btn-secondary-hover: global.$black-tint-1;
