--- a/components/nds-core/scss/colours/tokens/_global.scss
+++ b/components/nds-core/scss/colours/tokens/_global.scss
@@ -18,6 +18,7 @@ $nice-teal-tint-3: #c8e0e6;
 $nice-blue-tint-1: #407291;
 $nice-blue-tint-2: #80a1b5;
 $nice-blue-tint-3: #bfd0da;
+$nice-blue-tint-4: #023452;
 $nice-cream-1: #ded5ca;
 $nice-cream-2: #e6e0d7;
 $nice-cream-3: #eeeae4;
