--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -105,9 +105,17 @@ $filter-option-text-before-border: global.$black-tint-1;
 $filter-input-controls-border: global.$custom-grey-2;
 
 // Full bleed
-$full-bleed-background: global.$white;
-$full-bleed-light-background: global.$nice-teal;
-$full-bleed-light-text: global.$white;
+$full-bleed-background: global.$nice-teal;
+$full-bleed-background-dark: global.$nice-blue;
+$full-bleed-background-light: global.$nice-cream-1;
+$full-bleed-background-image-dark: global.$nice-black;
+$full-bleed-background-image-light: global.$white;
+$full-bleed-text: global.$white;
+$full-bleed-text-dark: global.$white;
+$full-bleed-text-light: global.$nice-black;
+$full-bleed-text-transparent: global.$nice-black;
+$full-bleed-text-image-dark: global.$white;
+$full-bleed-text-image-light: global.$nice-black;
 
 // Hero
 $hero-background: global.$nice-blue-tint-1;
