NDS-337 Add spacing, colour & typography foundation pages to docs

--- a/docs/styles/globals.scss
+++ b/docs/styles/globals.scss
@@ -1,2 +1,3 @@
 @use '@nice-digital/design-system/scss/base';
 @use '@nice-digital/nds-button/scss/button';
+@use '@nice-digital/nds-table/scss/table';
