--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -7,4 +7,13 @@
   background: transparent;
   border: 1px solid colours.$border;
   padding: utils.rem(spacing.$medium);
+
+  & > h2,
+  & > h3,
+  & > h4,
+  & > h5,
+  & > h6 {
+    @include typography.h6;
+    margin-top: 0;
+  }
 }
