NDS-377 Add alert docs, update Code Hike, update in-page nav

--- a/docs/components/core/Screenshot/Screenshot.module.scss
+++ b/docs/components/core/Screenshot/Screenshot.module.scss
@@ -1,3 +1,4 @@
+@use '@nice-digital/nds-core/scss/layout';
 @use '@nice-digital/nds-core/scss/spacing';
 @use '@nice-digital/nds-core/scss/utils';
 
@@ -11,4 +12,5 @@
 
 .caption {
   font-style: italic;
+  max-width: layout.$readable-width;
 }
