NDS-377 Add button component docs

--- a/docs/components/core/Screenshot/Screenshot.module.scss
+++ b/docs/components/core/Screenshot/Screenshot.module.scss
@@ -3,7 +3,7 @@
 @use '@nice-digital/nds-core/scss/utils';
 
 .container {
-  margin: 0 0 utils.rem(spacing.$medium);
+  margin: 0 0 utils.rem(spacing.$large);
 }
 
 .screenshot {
