--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -6,6 +6,7 @@
 .example {
   background: transparent;
   border: 1px solid colours.$border;
+  margin: 0 0 utils.rem(spacing.$medium);
   padding: utils.rem(spacing.$medium);
 
   & > h2,
