NDS-377 Add grids and layout docs

--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -17,4 +17,10 @@
     @include typography.h6;
     margin-top: 0;
   }
+
+  /* Just some custom styles for grid items within examples, to make them a little clearer */
+  [data-g] {
+    background: colours.$table-row-even;
+    text-align: center;
+  }
 }
