--- a/docs/components/layouts/RootLayout.module.scss
+++ b/docs/components/layouts/RootLayout.module.scss
@@ -1,9 +1,12 @@
+@use '@nice-digital/nds-core/scss/colours';
 @use '@nice-digital/nds-core/scss/spacing';
 @use '@nice-digital/nds-core/scss/utils';
 @use '@nice-digital/nds-core/scss/typography';
 @use '@nice-digital/nds-core/scss/media-queries';
 
 .header {
+  background: colours.$fill-white-background;
+  border-bottom: 1px solid colours.$border;
   padding: utils.rem(spacing.$small) 0;
 
   @include media-queries.mq($from: md) {
