NDS-385 Add image to hero component

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -120,6 +120,7 @@ $full-bleed-text-image-light: global.$nice-black;
 // Hero
 $hero-background: global.$nice-blue-tint-1;
 $hero-border: global.$nice-blue-tint-2;
+$hero-image-wash: global.$nice-black;
 
 // Horizontal nav
 $horizontal-nav-list-border: global.$nice-black;
