--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -133,6 +133,9 @@ $horizontal-nav-active-link-mobile-background: global.$nice-teal;
 // Icons
 $icons: global.$nice-teal;
 
+// Page header
+$page-header-full-width-background: global.$nice-cream-3;
+
 // Panels
 $panel-default-background: global.$nice-cream;
 $panel-default-border: global.$custom-grey-2;
