--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -134,7 +134,9 @@ $horizontal-nav-active-link-mobile-background: global.$nice-teal;
 $icons: global.$nice-teal;
 
 // Page header
-$page-header-full-width-background: global.$nice-cream-3;
+$page-header-full-width-light-background: global.$nice-cream-3;
+$page-header-full-width-dark-background: global.$nice-blue;
+$page-header-full-width-dark-background-text-colour: global.$white;
 
 // Panels
 $panel-default-background: global.$nice-cream;
