NDS-402 Add second section to page header

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -137,6 +137,7 @@ $icons: global.$nice-teal;
 $page-header-full-width-light-background: global.$nice-cream-3;
 $page-header-full-width-dark-background: global.$nice-blue;
 $page-header-full-width-dark-background-text-colour: global.$white;
+$page-header-second-section-border-colour: global.$black-tint-2;
 
 // Panels
 $panel-default-background: global.$nice-cream;
