--- a/components/nds-page-header/scss/page-header.scss
+++ b/components/nds-page-header/scss/page-header.scss
@@ -115,4 +115,11 @@
     display: block;
     margin: 0;
   }
+
+  &__second-section {
+    @include media-queries.mq($from: md) {
+      border-left: 2px solid colours.$page-header-second-section-border-colour;
+      padding-left: utils.rem(spacing.$medium);
+    }
+  }
 }
