--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -18,9 +18,10 @@
     margin-top: 0;
   }
 
+  // TODO: apply these styles specifically to the grid example page
   /* Just some custom styles for grid items within examples, to make them a little clearer */
-  [data-g] {
-    background: colours.$table-row-even;
-    text-align: center;
-  }
+  // [data-g] {
+  //   background: colours.$table-row-even;
+  //   text-align: center;
+  // }
 }
