NDS-402 page header update (#321)
* Add new variant of page header

* Publish

 - @nice-digital/design-system@5.0.16-alpha.0
 - @nice-digital/nds-a-z-list@4.0.8-alpha.0
 - @nice-digital/nds-action-banner@4.0.7-alpha.0
 - @nice-digital/nds-alert@4.0.7-alpha.0
 - @nice-digital/nds-alphabet@3.0.7-alpha.0
 - @nice-digital/nds-breadcrumbs@4.0.7-alpha.0
 - @nice-digital/nds-button@4.0.9-alpha.0
 - @nice-digital/nds-card@4.0.8-alpha.0
 - @nice-digital/nds-checkbox@4.0.7-alpha.0
 - @nice-digital/nds-column-list@4.0.7-alpha.0
 - @nice-digital/nds-container@4.0.7-alpha.0
 - @nice-digital/nds-core@4.0.7-alpha.0
 - @nice-digital/nds-enhanced-pagination@4.0.7-alpha.0
 - @nice-digital/nds-filters@5.0.12-alpha.0
 - @nice-digital/nds-form-group@4.0.7-alpha.0
 - @nice-digital/nds-full-bleed@4.0.7-alpha.0
 - @nice-digital/nds-grid@4.0.10-alpha.0
 - @nice-digital/nds-hero@4.0.7-alpha.0
 - @nice-digital/nds-horizontal-nav@4.0.7-alpha.0
 - @nice-digital/nds-in-page-nav@4.0.8-alpha.0
 - @nice-digital/nds-input@4.0.7-alpha.0
 - @nice-digital/nds-maintain-ratio@4.0.7-alpha.0
 - @nice-digital/nds-page-header@4.0.7-alpha.0
 - @nice-digital/nds-panel@4.0.7-alpha.0
 - @nice-digital/nds-phase-banner@4.0.7-alpha.0
 - @nice-digital/nds-prev-next@4.0.7-alpha.0
 - @nice-digital/nds-radio@4.0.7-alpha.0
 - @nice-digital/nds-simple-pagination@4.0.7-alpha.0
 - @nice-digital/nds-stacked-nav@4.0.7-alpha.0
 - @nice-digital/nds-table@4.0.7-alpha.0
 - @nice-digital/nds-tabs@4.0.7-alpha.0
 - @nice-digital/nds-tag@4.0.7-alpha.0
 - @nice-digital/nds-textarea@4.0.7-alpha.0
 - @nice-digital/design-system-docs@1.0.17-alpha.0

* NDS-402 Complete page header updates

* NDS-402 Add second section to page header

---------

Co-authored-by: Chris Barker <chris.barker@nice.org.uk>

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -133,6 +133,12 @@ $horizontal-nav-active-link-mobile-background: global.$nice-teal;
 // Icons
 $icons: global.$nice-teal;
 
+// Page header
+$page-header-full-width-light-background: global.$nice-cream-3;
+$page-header-full-width-dark-background: global.$nice-blue;
+$page-header-full-width-dark-background-text-colour: global.$white;
+$page-header-second-section-border-colour: global.$black-tint-2;
+
 // Panels
 $panel-default-background: global.$nice-cream;
 $panel-default-border: global.$custom-grey-2;
