--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -118,9 +118,10 @@ $full-bleed-text-image-dark: global.$white;
 $full-bleed-text-image-light: global.$nice-black;
 
 // Hero
-$hero-background: global.$nice-blue-tint-1;
-$hero-border: global.$nice-blue-tint-2;
-$hero-image-wash: global.$nice-black;
+$hero-background-default: global.$nice-cream-3;
+$hero-background-dark: global.$nice-blue;
+$hero-text-default: global.$nice-black;
+$hero-text-dark: global.$white;
 
 // Horizontal nav
 $horizontal-nav-list-border: global.$nice-black;
