NDS-412 Update action banner for new variant

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -65,10 +65,11 @@ $radio-hint: global.$black-tint-1;
 $a-z-list-heading-background: global.$white;
 
 // Action banner
-$action-banner-default-background: global.$nice-blue;
+$action-banner-default-background: global.$nice-teal;
 $action-banner-default-border: global.$nice-black;
 $action-banner-subtle-background: global.$nice-cream;
 $action-banner-subtle-border: global.$nice-cream;
+$action-banner-full-width-subtle-background: global.$nice-cream;
 
 // Alphabet
 $alphabet-letter-background: global.$white;
