--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -69,6 +69,8 @@ $action-banner-default-background: global.$nice-blue;
 $action-banner-default-border: global.$nice-black;
 $action-banner-subtle-background: global.$nice-cream;
 $action-banner-subtle-border: global.$nice-cream;
+$action-banner-full-width-background: global.$nice-teal;
+$action-banner-full-width-border: global.$nice-teal;
 
 // Alphabet
 $alphabet-letter-background: global.$white;
