NDS-412 Remove commented code. Add padding to action banner container to match figma visual

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -108,6 +108,7 @@
     background: colours.$action-banner-full-width-background;
     border: 1px solid colours.$action-banner-full-width-border;
     color: colours.$text-inverse;
+    padding: utils.rem(spacing.$x-large 0 spacing.$x-large 0);
 
     .action-banner__title {
       color: colours.$text-inverse;
